# cpython_tutorial

./: .gitignore  README.md
slides/: index.html
tutorial/: 00_setup.md  README.md  setup.md
tutorial/code/hello_world_c/: .gitignore  hello.c  pyproject.toml
tutorial/code/hello_world_rust/: Cargo.toml  pyproject.toml
tutorial/code/hello_world_rust/src/: lib.rs
tutorial/code/hello_world_zig/: .gitignore  pyproject.toml
tutorial/code/hello_world_zig/src/: hello.zig
tutorial/excercises/: 00_compile_cprogram.md  01_compile_cpython.md  01_compile_cpython.md.bak  02_add_python_function.md  03_add_c_function.md  04_add_container_method.md  04_add_container_method.md.bak  05_add_grammar_alias.md  06_helloworld_c.md  06_helloworld_c.md.bak  07_helloworld_zig.md  08_helloworld_rust.md  09_module_with_functions.md  10_rewrite_python_functionality.md
tutorial/exercises/: 00_compile_cprogram.md  01_compile_cpython.md  02_add_python_function.md  03_add_c_function.md  03_add_c_function.md.bak  05_add_grammar_alias.md  05_add_grammar_alias.md.bak  06_helloworld_c.md  07_helloworld_zig.md  07_helloworld_zig.md.bak  08_helloworld_rust.md  08_helloworld_rust.md.bak  09_module_with_functions.md  10_rewrite_python_functionality.md  10_rewrite_python_functionality.md.bak
